changed to flats and fixed dot duration

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
                 </div>
                 
                 <div class="flex items-center gap-2 bg-white/5 rounded-xl p-2">
+                    <!-- Save measure only 
                     <button id="downloadMeasureMidi" class="px-3 py-2 bg-purple-500 hover:bg-purple-600 text-white rounded-lg transition-colors duration-200 text-sm">
                         💾 Measure
                     </button>
+                    -->
                     <button id="downloadFullScore" class="px-3 py-2 bg-purple-500 hover:bg-purple-600 text-white rounded-lg transition-colors duration-200 text-sm">
                         💾 Full Score
                     </button>
